--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
           <a href="http://"><i class="fab fa-instagram"></i></a>
           <a href="http://"><i class="fab fa-youtube"></i></a>
         </div>
-        <p>Copyright &copy; Enea</p>
+        <p>
+          Made with <i style="color: red;" class="fas fa-heart"></i> by Enea
+        </p>
       </div>
     </div>
   </body>
