--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!-- Header Content -->
       <div class="header-content">
         <div class="header-text">
-          <div class="logo floating"><img src="img/logo.png" alt="" /></div>
+          <div class="logo"><img class="floating" src="img/logo.png" alt="" /></div>
           <h1 id="name">Enea Jahollari</h1>
           <p id="description">Web Developer. Designer. Student.</p>
         </div>
