--- a/index.html
+++ b/index.html
@@ -1,53 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:300,400"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-      crossorigin="anonymous"
-    />
 
-    <link rel="stylesheet" href="style.css" />
-    <title>Enea Jahollari | Web Developer</title>
-  </head>
-  <body>
-    <!-- Header -->
-    <div class="header">
-      <!-- Header Content -->
-      <div class="header-content">
-        <div class="header-text">
-          <div class="logo"><img class="floating" src="img/logo.png" alt="" /></div>
-          <h1 id="name">Enea Jahollari</h1>
-          <p id="description">Web Developer. Designer. Student.</p>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+    crossorigin="anonymous" />
+
+  <link rel="stylesheet" href="style.css" />
+  <title>Enea Jahollari | Web Developer</title>
+</head>
+
+<body>
+  <!-- Header -->
+  <div class="header">
+    <!-- Header Content -->
+    <div class="header-content">
+      <div class="header-text">
+        <div class="logo">
+          <img class="floating" src="img/logo.png" alt="" />
         </div>
+        <h1 id="name">Enea Jahollari</h1>
+        <p id="description">Web Developer. Designer. Student.</p>
       </div>
-      <div class="scroll-mouse">
-        <a href="#about"><span></span></a>
+    </div>
+    <div class="scroll-mouse">
+      <a href="#about"><span></span></a>
+    </div>
+  </div>
+
+  <div class="container"></div>
+
+  <footer class="footer">
+    <div class="footer-info-name">
+      <h3>Enea Jahollari</h3>
+      <p>
+        <a class="email" href="mailto:jahollarienea14@gmail.com">jahollarienea14@gmail.com</a>
+      </p>
+      <p>
+        I’m a web developer. I can help you build and grow your next
+        website.
+      </p>
+    </div>
+
+    <div class="footer-info">
+      <div class="footer-info-box">
+        <h4 class="info-box-title">Menu</h4>
+        <ul class="footer-list">
+          <li><a href="/">About</a></li>
+          <li><a href="/blog/">Blog</a></li>
+          <li><a href="/projects/featured/">Projects</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-info-box">
+        <h4 class="info-box-title">Links</h4>
+        <ul class="footer-list">
+          <li>
+            <a href="https://www.bankaefundit.com"> Banka E Fundit</a>
+          </li>
+          <li>
+            <a href="https://www.lexolibra.com" target="_blank" title="Lexo Libra">
+              Lexo Libra
+            </a>
+          </li>
+          <li>
+            <a href="https://www.dailytechlife.com"> Daily Tech Life</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer-info-box">
+        <h4 class="info-box-title">Social</h4>
+
+        <ul class="footer-list">
+          <li>
+            <a href="https://github.com/eneajaho" target="_blank" title="Look through my Github profile">
+              Github
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/httpsenea" target="_blank" title="See my Facebook profile">
+              Facebook
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/httpsenea" target="_blank" title="See my Instagram profile">
+              Instagram
+            </a>
+          </li>
+
+        </ul>
+
+
       </div>
     </div>
 
-    <div class="container">
-      <!-- Footer -->
-      <div class="footer">
-        <p>Follow on social media!</p>
-        <div class="social">
-          <a href="http://"><i class="fab fa-twitter"></i></a>
-          <a href="http://"><i class="fab fa-facebook-square"></i></a>
-          <a href="http://"><i class="fab fa-instagram"></i></a>
-          <a href="http://"><i class="fab fa-youtube"></i></a>
-        </div>
-        <p>
-          Made with <i style="color: red;" class="fas fa-heart"></i> by Enea
-        </p>
-      </div>
+
+    <div class="copyright">
+
+      <p>Made with <i style="color: red;" class="fas fa-heart"></i> by Enea</p>
     </div>
-  </body>
+
+  </footer>
+</body>
+
 </html>
