--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <div class="header-content">
       <div class="header-text">
         <div class="logo">
-          <img class="floating" src="img/logo.png" alt="" />
+          <div class="logo-animation e"></div>
+          <div class="logo-animation j"></div>
+
+          <!-- <img class="floating" src="img/logo.png" alt="" /> -->
         </div>
         <h1 id="name">Enea Jahollari</h1>
         <p id="description">Web Developer. Designer. Student.</p>
