--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p id="description">Web Developer. Designer. Student.</p>
       </div>
     </div>
-    <div class="scroll-mouse">
+    <div style="display:none;" class="scroll-mouse">
       <a href="#about"><span></span></a>
     </div>
   </div>
@@ -54,13 +54,23 @@
         <ul class="footer-list">
           <li><a href="/">About</a></li>
           <li><a href="/blog/">Blog</a></li>
-          <li><a href="/projects/featured/">Projects</a></li>
+          <li><a href="/projects/">Projects</a></li>
         </ul>
       </div>
 
       <div class="footer-info-box">
         <h4 class="info-box-title">Links</h4>
         <ul class="footer-list">
+           <li>
+            <a href="https://www.9to5programmer.com" target="_blank" title="9to5 Programmer">
+              9to5 Programmer
+            </a>
+          </li>
+          <li>
+            <a href="https://eneajaho.me/encrypt" target="_blank" title="Binary Encrypt/Decrypt">
+              Binary Encrypt/Decrypt
+            </a>
+          </li>
           <li>
             <a href="https://www.bankaefundit.com"> Banka E Fundit</a>
           </li>
