--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
         <a class="email" href="mailto:jahollarienea14@gmail.com">jahollarienea14@gmail.com</a>
       </p>
       <p>
-        I’m a web developer. I can help you build and grow your next
-        website.
+        I'm a fullstack web developer. I can help you build and grow your next website.
       </p>
     </div>
 
@@ -59,28 +58,28 @@
       </div>
 
       <div class="footer-info-box">
-        <h4 class="info-box-title">Links</h4>
+        <h4 class="info-box-title">Websites I've built</h4>
         <ul class="footer-list">
-           <li>
-            <a href="https://www.9to5programmer.com" target="_blank" title="9to5 Programmer">
-              9to5 Programmer
-            </a>
+          <li>
+            <a href="https://www.portalisportiv.com" target="_blank" title="Portali Sportiv">Portali Sportiv</a>
+          </li>
+         <li>
+            <a href="https://www.9to5programmer.com" target="_blank" title="9to5 Programmer">9to5 Programmer</a>
           </li>
           <li>
-            <a href="https://eneajaho.me/encrypt" target="_blank" title="Binary Encrypt/Decrypt">
-              Binary Encrypt/Decrypt
-            </a>
+            <a href="https://www.bankaefundit.com" target="_blank">Banka E Fundit</a>
           </li>
           <li>
-            <a href="https://www.bankaefundit.com"> Banka E Fundit</a>
+            <a href="https://www.lexolibra.com" target="_blank" title="Lexo Libra">Lexo Libra</a>
           </li>
           <li>
-            <a href="https://www.lexolibra.com" target="_blank" title="Lexo Libra">
-              Lexo Libra
-            </a>
+            <a href="https://www.dailytechlife.com" target="_blank"> Daily Tech Life</a>
           </li>
           <li>
-            <a href="https://www.dailytechlife.com"> Daily Tech Life</a>
+            <a href="https://www.arjancarja.com" target="_blank">Arjan Carja Photography</a>
+          </li>
+          <li>
+            <a href="https://www.daelectrical.org.uk/" target="_blank">DA Electrical</a>
           </li>
         </ul>
       </div>
