--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
         <div class="logo">
           <div class="logo-animation e"></div>
           <div class="logo-animation j"></div>
-
-          <!-- <img class="floating" src="img/logo.png" alt="" /> -->
         </div>
         <h1 id="name">Enea Jahollari</h1>
-        <p id="description">Web Developer. Designer. Student.</p>
+        <p id="description">Full Stack Web Developer</p>
       </div>
     </div>
     <div style="display:none;" class="scroll-mouse">
@@ -39,6 +37,7 @@
   <footer class="footer">
     <div class="footer-info-name">
       <h3>Enea Jahollari</h3>
+      <h5 style="font-weight: 300;">Angular & Laravel Developer </h5>  
       <p>
         <a class="email" href="mailto:jahollarienea14@gmail.com">jahollarienea14@gmail.com</a>
       </p>
