--- a/index.html
+++ b/index.html
@@ -37,13 +37,8 @@
   <footer class="footer">
     <div class="footer-info-name">
       <h3>Enea Jahollari</h3>
-      <h5 style="font-weight: 300;">Angular & Laravel Developer </h5>  
-      <p>
-        <a class="email" href="mailto:jahollarienea14@gmail.com">jahollarienea14@gmail.com</a>
-      </p>
-      <p>
-        I'm a fullstack web developer. I can help you build and grow your next website.
-      </p>
+      <h5 style="padding: 0;margin: 5px 0;">Angular &amp; Laravel Developer </h5>
+      <p style="color: #c9c9c9;">I can help you build and grow your next website.</p>
     </div>
 
     <div class="footer-info">
@@ -84,9 +79,13 @@
       </div>
 
       <div class="footer-info-box">
-        <h4 class="info-box-title">Social</h4>
-
+        <h4 class="info-box-title">Contact Me</h4>
         <ul class="footer-list">
+          <li>
+            <a href="mailto:jahollarienea14@gmail.com" target="_blank" title="Gmail">
+              Gmail
+            </a>
+          </li>
           <li>
             <a href="https://github.com/eneajaho" target="_blank" title="Look through my Github profile">
               Github
@@ -102,16 +101,12 @@
               Instagram
             </a>
           </li>
-
         </ul>
-
-
       </div>
     </div>
 
 
     <div class="copyright">
-
       <p>Made with <i style="color: red;" class="fas fa-heart"></i> by Enea</p>
     </div>
 
